# agentfs

./: .gitignore  ARCHITECTURE.md  README.md  REFERENCIAS.md  agent.py  agent_notebook.py  config.py  config.toml  context_manager.py  llm_client.py  multi_agent.py  pyproject.toml  start.ps1  start.sh  tools.py  vault_indexer.py  vault_summarizer.py  vault_watcher.py
ctxvault/: VAULT_MAP.md  __init__.py  agent.py  agent_notebook.py  config.py  context_manager.py  multi_agent.py  retriever.py  tools.py  vault_indexer.py
ctxvault/.agent-notes/: SESSION_REPORT.md  STATE.md
tests/: test_agent.py  test_agent_notebook.py  test_config.py  test_context_manager.py  test_retriever.py  test_tools.py  test_vault_indexer.py
